--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ body.multiple-scenes.mobile #titleBar {
   height: 100%;
   line-height: 30px;
   padding: 5px;
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(52, 235, 222);
+  background-color: rgba(52, 235, 222);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
